--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                "
     >Titulo principal</h1>
 
-    <button class="btnComprar">Comprar</button>
+    <ul style="color:white;">
+        <li>Nosotros</li>
+        <li>Productos</li>
+        <li>Acerca de</li>
+    </ul>
+
+    <!-- <button class="btnComprar">Comprar</button> -->
 </body>
 </html>
